tests/sumo/extended/vaporizer/errors/end_missing/errors.sumo
Warning: Vaporizers are deprecated. Use rerouters instead.
Error: Attribute 'end' is missing in definition of a vaporizer.
Quitting (on error).
